    * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
    * ADD: FileManager: button to view last status of copy/move action after action was detached to background
    * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
    * CHANGE: FileManager: last_played.info file is now stored in /tmp instead of played dir location - no need to have write access to mounted shares for slideshow/dir playback
    * CHANGE: FileManager: separate file/dir icons from filenames in table to make better vertical allignment
    * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
    * CHANGE: move haserl from /bin to /usr/bin for better CGI portability (compatibility with LGMOD S7)
    * CHANGE: mount options for VFAT/NTFS/EXT3/EXT4 got changed to use at least 'noatime' to make less writes to USB storage and keep permissions on NTFS
    * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already

0.5.0-beta3 [2011.12.24]:

    * FIX: boot if any of netcast_config_add_* options was disabled and NetCast config.xml is too big to parse
    * FIX: udhcpc script now sets default IP address before making requests instead of 0.0.0.0 when configuration set to DHCP but no DHCP servers around
    * FIX: FileManager link in WebUI
    * FIX: back from playback in FileManager had mixed paths
    * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
    * ADD: text files and images viewer in FileManager that's usable with remote control
    * ADD: /mnt/usb{1,2}/Drive{5,6} mount points
    * ADD: support for EXT3, JFS, [ EXT4 via additional kernel modules ], other supported filesystems by kernel automounting on hotplug
    * ADD: support for OpenLGTV_BCM dir, Yahoo Widgets, etc. on JFS, EXT3/[4],... formated partitions